--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,29 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - Table Practice</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background: #f4f6f8;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+    }
+
+    h1 {
+      margin-top: 0;
+      font-size: 28px;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 10px;
+    }
+
+    h2 {
+      margin-top: 24px;
+      font-size: 18px;
+      color: #444;
+    }
+
+    p {
+      margin: 10px 0;
+      font-size: 15px;
+    }
+
+    .footer {
+      margin-top: 30px;
+      font-size: 14px;
+      color: #777;
+      border-top: 1px solid #eee;
+      padding-top: 15px;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px;">
-  <h1>Privacy Policy</h1>
 
-  <p>Table Practice – Math Trainer does not collect, store, or share any personal information from users.</p>
+<body>
+  <div class="container">
+    <h1>Privacy Policy</h1>
 
-  <h2>Information Collection</h2>
-  <p>This application does not require user registration and does not collect personal data.</p>
+    <p>
+      Table Practice – Math Trainer does not collect, store, or share any personal
+      information from users.
+    </p>
 
-  <h2>Third-Party Services</h2>
-  <p>This app does not use analytics, advertising SDKs, or third-party tracking services.</p>
+    <h2>Information Collection</h2>
+    <p>
+      This application does not require user registration and does not collect
+      personal data.
+    </p>
 
-  <h2>Children’s Privacy</h2>
-  <p>This app is safe for students and children. No personal information is collected.</p>
+    <h2>Third-Party Services</h2>
+    <p>
+      This app does not use analytics, advertising SDKs, or third-party tracking
+      services.
+    </p>
 
-  <h2>Changes to This Policy</h2>
-  <p>If the policy changes in the future, updates will be posted on this page.</p>
+    <h2>Children’s Privacy</h2>
+    <p>
+      This app is safe for students and children. No personal information is collected.
+    </p>
 
-  <h2>Contact</h2>
-  <p>If you have any questions, please contact us at: enamult36@gmail.com</p>
+    <h2>Changes to This Policy</h2>
+    <p>
+      If the policy changes in the future, updates will be posted on this page.
+    </p>
 
-  <p>Last updated: February 2026</p>
+    <h2>Contact</h2>
+    <p>
+      If you have any questions, please contact us at: <b>enamult36@gmail.com</b>
+    </p>
+
+    <div class="footer">
+      Last updated: February 2026
+    </div>
+  </div>
 </body>
 </html>
